PetNetService: added /pet-app PathBase (application path)

--- a/dotnet_examples/PetNetService/src/PetService.Web/appsettings.json
+++ b/dotnet_examples/PetNetService/src/PetService.Web/appsettings.json
@@ -8,5 +8,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "App": {
+    "ApplicationPath": "/pet-app"
+  }
 }
