--- a/dotnet_examples/PetNetService/src/PetService.Web/Properties/launchSettings.json
+++ b/dotnet_examples/PetNetService/src/PetService.Web/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "PetService.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:5001/pet-app;http://localhost:5000/pet-app",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
