PetService: custom IWebHost building + added file logging

--- a/dotnet_examples/PetNetService/src/PetService.Web/appsettings.json
+++ b/dotnet_examples/PetNetService/src/PetService.Web/appsettings.json
@@ -6,6 +6,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
+    },
+    "File": {
+      "FilePath": "PetService.log"
     }
   },
   "AllowedHosts": "*",
