--- a/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
+++ b/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
@@ -15,4 +15,8 @@
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CoreService\CoreService.csproj" />
+    </ItemGroup>
+
 </Project>
