--- a/dotnet_examples/PetNetService/test/CoreService.Tests/CoreService.Tests.csproj
+++ b/dotnet_examples/PetNetService/test/CoreService.Tests/CoreService.Tests.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Moq" Version="4.9.0" />
       <PackageReference Include="xunit" Version="2.4.0" />
       <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     </ItemGroup>
