--- a/dotnet_examples/PetNetService/src/CoreService/CoreService.csproj
+++ b/dotnet_examples/PetNetService/src/CoreService/CoreService.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-    </PropertyGroup>
+    <Import Project="../../build/Build.targets" />
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
