--- a/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
+++ b/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
@@ -1,8 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+    <Import Project="../../build/Build.targets" />
+    
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <UserSecretsId>aspnet-PetService.Web-2EA81EE2-A58F-4A9A-9B16-108BF0A315C1</UserSecretsId>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
