PetNetService: CoreService.Tests project imports Build.targets file

--- a/dotnet_examples/PetNetService/test/CoreService.Tests/CoreService.Tests.csproj
+++ b/dotnet_examples/PetNetService/test/CoreService.Tests/CoreService.Tests.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+    <Import Project="../../build/Build.targets" />
+
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
