--- a/dotnet_examples/PetNetService/src/CoreService/CoreService.csproj
+++ b/dotnet_examples/PetNetService/src/CoreService/CoreService.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Import Project="../../build/Build.targets" />
+    <Import Project="../../build/Build.targets"/>
+
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+    </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
-      <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1"/>
+        <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0"/>
     </ItemGroup>
-    
+
 </Project>
