--- a/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
+++ b/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
@@ -4,6 +4,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <!--<TargetFramework>net472</TargetFramework>-->
         <UserSecretsId>aspnet-PetService.Web-2EA81EE2-A58F-4A9A-9B16-108BF0A315C1</UserSecretsId>
         <Version>1.1.0</Version>
     </PropertyGroup>
@@ -20,6 +21,26 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App"/>
+        <!--<PackageReference Include="Microsoft.AspNetCore" Version="2.1.3" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="2.1.1" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="2.1.1" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.3" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.3" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="2.1.3" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Host" Version="1.1.8" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.ViewCompilation" Version="2.1.1" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Mvc.RazorPages" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="2.1.2" />-->
+        <!--<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />-->
+        <!--<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.2" />-->
         <!--<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1"/>-->
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All"/>
     </ItemGroup>
