PetApp: using gradle to the max: renamed projects in common folder to make gradle not include the folder in their project name (Utils and Utils.Core)

--- a/java_examples/kotlin/PetApp/VNextSpringModule/build.gradle
+++ b/java_examples/kotlin/PetApp/VNextSpringModule/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	// Jackson datatype to use java 8 time api
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 
-	compile project(":Common/Utils")
+	compile project(":Utils")
 
 	// annotation processing
 	kapt('org.springframework.boot:spring-boot-configuration-processor')
