--- a/java_examples/kotlin/PetApp/settings.gradle
+++ b/java_examples/kotlin/PetApp/settings.gradle
@@ -4,3 +4,6 @@ include 'Common/Utils'
 include 'EVModule'
 include 'SADModule'
 include 'VNextSpringModule'
+
+project(":Common/Utils.Core").name = "Utils.Core"
+project(":Common/Utils").name = "Utils"
