for prev commit

--- a/java_examples/kotlin/PetApp/build.gradle
+++ b/java_examples/kotlin/PetApp/build.gradle
@@ -81,4 +81,5 @@ dependencies {
 
 task wrapper(type: Wrapper) {
 	gradleVersion = gradleVersion
+	distributionType = Wrapper.DistributionType.ALL
 }
