--- a/java_examples/kotlin/ExposedSample/build.gradle
+++ b/java_examples/kotlin/ExposedSample/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
 	ext {
 		kotlinVersion = '1.3.0'
-		springBootVersion = '2.0.6.RELEASE'
+		springBootVersion = '2.1.0.RELEASE'
 		gradlewVersion = '4.10.2'
 		exposedVersion = '0.11.1'
 	}
+	ext['kotlin.version'] = kotlinVersion
 	repositories {
 		mavenCentral()
 	}
@@ -44,15 +45,15 @@ repositories {
 
 
 dependencies {
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-	compile("org.jetbrains.kotlin:kotlin-reflect")
+	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+	implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-	compile('org.springframework.boot:spring-boot-starter-jdbc')
-	runtime('mysql:mysql-connector-java')
+	implementation('org.springframework.boot:spring-boot-starter-jdbc')
+	runtimeOnly('mysql:mysql-connector-java')
 
-	compile("org.jetbrains.exposed:exposed:${exposedVersion}")
+	implementation("org.jetbrains.exposed:exposed:${exposedVersion}")
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 task wrapper(type: Wrapper) {
