--- a/java_examples/kotlin/PetApp/build.gradle
+++ b/java_examples/kotlin/PetApp/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
 	ext {
 		kotlinVersion = '1.3.0'
-		springBootVersion = '2.0.6.RELEASE'
+		springBootVersion = '2.1.0.RELEASE'
 		appVersion = '1.0.0-SNAPSHOT'
 		gradleVersion = '4.10.2'
 	}
+	ext['kotlin.version'] = kotlinVersion
 	repositories {
 		mavenCentral()
 	}
@@ -38,12 +39,12 @@ allprojects {
 	}
 
 	dependencies {
-		compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-		compile("org.jetbrains.kotlin:kotlin-reflect")
+		implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+		implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-		compile('org.springframework.boot:spring-boot-starter')
+		implementation('org.springframework.boot:spring-boot-starter')
 
-		testCompile('org.springframework.boot:spring-boot-starter-test') {
+		testImplementation('org.springframework.boot:spring-boot-starter-test') {
 			exclude module: 'junit'
 		}
 		testImplementation('org.junit.jupiter:junit-jupiter-api')
