--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -2,7 +2,7 @@ buildscript {
 	ext {
 		kotlinVersion = '1.3.0'
 		kotlinCorouteVersion = '1.0.0'
-		springBootVersion = '2.0.6.RELEASE'
+		springBootVersion = '2.1.0.RELEASE'
 		gradlewVersion = '4.10.2'
 		swaggerVersion = '2.9.2'
 		exposedVersion = '0.11.1'
@@ -47,25 +47,25 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-webflux')
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
-	compile("io.springfox:springfox-swagger2:${swaggerVersion}")
-	compile("io.springfox:springfox-swagger-ui:${swaggerVersion}")
-	compile("org.jetbrains.exposed:exposed:${exposedVersion}")
-	compile("org.jetbrains.exposed:spring-transaction:${exposedVersion}")
+	implementation('org.springframework.boot:spring-boot-starter-webflux')
+	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+	implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+	implementation("io.springfox:springfox-swagger2:${swaggerVersion}")
+	implementation("io.springfox:springfox-swagger-ui:${swaggerVersion}")
+	implementation("org.jetbrains.exposed:exposed:${exposedVersion}")
+	implementation("org.jetbrains.exposed:spring-transaction:${exposedVersion}")
 
-	compile("com.fasterxml.jackson.module:jackson-module-kotlin")
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-	compile("org.jetbrains.kotlin:kotlin-reflect")
+	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+	implementation("org.jetbrains.kotlin:kotlin-reflect")
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCorouteVersion}"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactor:${kotlinCorouteVersion}"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${kotlinCorouteVersion}"
 
 	kapt("org.springframework.boot:spring-boot-configuration-processor")
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('io.projectreactor:reactor-test')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('io.projectreactor:reactor-test')
 }
 
 task wrapper(type: Wrapper) {
