--- a/java_examples/kotlin/PetApp/build.gradle
+++ b/java_examples/kotlin/PetApp/build.gradle
@@ -3,9 +3,9 @@ buildscript {
 		kotlinVersion = '1.3.10'
 		springBootVersion = '2.1.0.RELEASE'
 		appVersion = '1.0.0-SNAPSHOT'
-		gradleVersion = '4.10.2'
+		gradlewVersion = '5.0'
 	}
-	ext['kotlin.version'] = kotlinVersion
+
 	repositories {
 		mavenCentral()
 	}
@@ -80,7 +80,7 @@ dependencies {
 	compile project(":VNextSpringModule")
 }
 
-task wrapper(type: Wrapper) {
-	gradleVersion = gradleVersion
+wrapper {
+	version = gradlewVersion
 	distributionType = Wrapper.DistributionType.ALL
 }
