--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -3,11 +3,11 @@ buildscript {
 		kotlinVersion = '1.3.10'
 		kotlinCorouteVersion = '1.0.0'
 		springBootVersion = '2.1.0.RELEASE'
-		gradlewVersion = '4.10.2'
+		gradlewVersion = '5.0'
 		swaggerVersion = '2.9.2'
 		exposedVersion = '0.11.2'
 	}
-	ext['kotlin.version'] = kotlinVersion
+
 	repositories {
 		mavenCentral()
 	}
@@ -45,7 +45,6 @@ repositories {
 	maven { url "https://dl.bintray.com/kotlin/exposed/" }
 }
 
-
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
@@ -68,7 +67,7 @@ dependencies {
 	testImplementation('io.projectreactor:reactor-test')
 }
 
-task wrapper(type: Wrapper) {
-	gradleVersion = gradlewVersion
+wrapper {
+	version = gradlewVersion
 	distributionType = Wrapper.DistributionType.ALL
 }
