Kotlin projects all of them now uses junit 5

--- a/java_examples/kotlin/ExposedSample/build.gradle
+++ b/java_examples/kotlin/ExposedSample/build.gradle
@@ -52,7 +52,15 @@ dependencies {
 
 	implementation("org.jetbrains.exposed:exposed:${exposedVersion}")
 
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude module: 'junit'
+	}
+	testImplementation('org.junit.jupiter:junit-jupiter-api')
+	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
+}
+
+test {
+	useJUnitPlatform()
 }
 
 wrapper {
