--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -63,8 +63,16 @@ dependencies {
 
 	kapt("org.springframework.boot:spring-boot-configuration-processor")
 
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude module: 'junit'
+	}
+	testImplementation('org.junit.jupiter:junit-jupiter-api')
+	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
 	testImplementation('io.projectreactor:reactor-test')
+}
+
+test {
+	useJUnitPlatform()
 }
 
 wrapper {
