Gradle wrapper version fix

--- a/java_examples/kotlin/ExposedSample/build.gradle
+++ b/java_examples/kotlin/ExposedSample/build.gradle
@@ -63,6 +63,6 @@ test {
 }
 
 wrapper {
-	version = gradlewVersion
+	gradleVersion = gradlewVersion
 	distributionType = Wrapper.DistributionType.ALL
 }
