--- a/java_examples/kotlin/PetApp/build.gradle
+++ b/java_examples/kotlin/PetApp/build.gradle
@@ -81,6 +81,6 @@ dependencies {
 }
 
 wrapper {
-	version = gradlewVersion
+	gradleVersion = gradlewVersion
 	distributionType = Wrapper.DistributionType.ALL
 }
