--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -76,6 +76,6 @@ test {
 }
 
 wrapper {
-	version = gradlewVersion
+	gradleVersion = gradlewVersion
 	distributionType = Wrapper.DistributionType.ALL
 }
