--- a/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
+++ b/dotnet_examples/PetNetService/src/PetService.Web/PetService.Web.csproj
@@ -1,16 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
-    <Import Project="../../build/Build.targets"/>
-
+    
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>$(NetCoreVersion)</TargetFramework>
         <!--<TargetFramework>net472</TargetFramework>-->
         <UserSecretsId>aspnet-PetService.Web-2EA81EE2-A58F-4A9A-9B16-108BF0A315C1</UserSecretsId>
         <Version>1.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
-        <None Update="app.db" CopyToOutputDirectory="PreserveNewest"/>
+        <None Update="app.db" CopyToOutputDirectory="PreserveNewest" />
         <Content Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
@@ -20,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App"/>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
         <!--<PackageReference Include="Microsoft.AspNetCore" Version="2.1.3" />-->
         <!--<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.1.2" />-->
         <!--<PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="2.1.2" />-->
@@ -41,12 +39,12 @@
         <!--<PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="2.1.2" />-->
         <!--<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />-->
         <!--<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.2" />-->
-        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" PrivateAssets="All" />
         <!--<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1"/>-->
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CoreService\CoreService.csproj"/>
+        <ProjectReference Include="..\CoreService\CoreService.csproj" />
     </ItemGroup>
 
 </Project>
