--- a/dotnet_examples/PetNetService/src/CoreService/CoreService.csproj
+++ b/dotnet_examples/PetNetService/src/CoreService/CoreService.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <PropertyGroup>
+        <TargetFramework>$(NetStandardVersion)</TargetFramework>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)"/>
         <PackageReference Include="System.ComponentModel.Annotations" Version="$(SystemComponentModelAnnotationsVersion)"/>
