--- a/java_examples/kotlin/ExposedSample/build.gradle
+++ b/java_examples/kotlin/ExposedSample/build.gradle
@@ -2,23 +2,17 @@ buildscript {
 	ext {
 		kotlinVersion = '1.3.21'
 		springBootVersion = '2.1.3.RELEASE'
-		gradlewVersion = '5.2.1'
-		exposedVersion = '0.12.2'
-	}
-
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		gradlewVersion = '5.3.1'
+		exposedVersion = '0.13.5'
 	}
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'org.springframework.boot'
+plugins {
+	id 'org.springframework.boot' version '2.1.3.RELEASE'
+	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
+}
+
 apply plugin: 'io.spring.dependency-management'
 
 group = 'hu.pet'
