--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -3,25 +3,18 @@ buildscript {
 		kotlinVersion = '1.3.21'
 		kotlinCorouteVersion = '1.1.1'
 		springBootVersion = '2.1.3.RELEASE'
-		gradlewVersion = '5.2.1'
+		gradlewVersion = '5.3.1'
 		swaggerVersion = '2.9.2'
-		exposedVersion = '0.12.2'
-	}
-
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		exposedVersion = '0.13.5'
 	}
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'org.springframework.boot'
+plugins {
+	id 'org.springframework.boot' version '2.1.3.RELEASE'
+	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
+	id "org.jetbrains.kotlin.kapt" version "1.3.21"
+}
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.pet'
@@ -55,7 +48,6 @@ dependencies {
 	implementation("io.springfox:springfox-swagger2:${swaggerVersion}")
 	implementation("io.springfox:springfox-swagger-ui:${swaggerVersion}")
 	implementation("org.jetbrains.exposed:exposed:${exposedVersion}")
-	implementation("org.jetbrains.exposed:spring-transaction:${exposedVersion}")
 
 	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
