--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -1,16 +1,14 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.21'
-		kotlinCorouteVersion = '1.1.1'
-		springBootVersion = '2.1.3.RELEASE'
+		exposedVersion = '0.13.6'
 		gradlewVersion = '5.3.1'
+		kotlinCorouteVersion = '1.1.1'
 		swaggerVersion = '2.9.2'
-		exposedVersion = '0.13.5'
 	}
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.1.3.RELEASE'
+	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 	id "org.jetbrains.kotlin.kapt" version "1.3.21"
@@ -52,7 +50,7 @@ dependencies {
 	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
-	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCorouteVersion}"
+	//implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCorouteVersion}"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactor:${kotlinCorouteVersion}"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${kotlinCorouteVersion}"
 
