Dotnet projects upgrade

--- a/dotnet_examples/PetNetService/test/CoreService.Tests/CoreService.Tests.csproj
+++ b/dotnet_examples/PetNetService/test/CoreService.Tests/CoreService.Tests.csproj
@@ -2,4 +2,7 @@
     <PropertyGroup>
         <TargetFramework>$(NetCoreVersion)</TargetFramework>
     </PropertyGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\CoreService\CoreService.csproj" />
+    </ItemGroup>
 </Project>
