--- a/flutter_examples/super_app/pubspec.yaml
+++ b/flutter_examples/super_app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl: ^0.15.7
   provider: ^3.0.0+1
   shrine_images: ^1.0.0
+  charts_flutter: ^0.6.0
 
 dev_dependencies:
   pedantic: ^1.8.0
