--- a/flutter_examples/super_app/pubspec.yaml
+++ b/flutter_examples/super_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^3.0.0+1
   shrine_images: ^1.0.0
   charts_flutter: ^0.6.0
+  google_maps_flutter: ^0.5.11
 
 dev_dependencies:
   pedantic: ^1.8.0
