--- a/flutter_examples/super_app/android/app/src/main/AndroidManifest.xml
+++ b/flutter_examples/super_app/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.super_app">
 
-	<meta-data
-			android:name="com.google.android.geo.API_KEY"
-			android:value="AIzaSyA0Z8M0Bu0dTa6PsKt-5EAGHD588U9QIsM"/>
-
 	<!-- io.flutter.app.FlutterApplication is an android.app.Application that
 		 calls FlutterMain.startInitialization(this); in its onCreate method.
 		 In most cases you can leave this as-is, but you if you want to provide
@@ -14,6 +10,9 @@
 			android:name="io.flutter.app.FlutterApplication"
 			android:label="Super Cupertino App"
 			android:icon="@mipmap/ic_launcher">
+
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA0Z8M0Bu0dTa6PsKt-5EAGHD588U9QIsM"/>
+
 		<activity
 				android:name=".MainActivity"
 				android:launchMode="singleTop"
