--- a/flutter_examples/super_app/pubspec.yaml
+++ b/flutter_examples/super_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shrine_images: ^1.0.0
   charts_flutter: ^0.6.0
   google_maps_flutter: ^0.5.11
+  geolocator: 5.1.0
 
 dev_dependencies:
   pedantic: ^1.8.0
