--- a/flutter_examples/super_app/ios/Runner/Info.plist
+++ b/flutter_examples/super_app/ios/Runner/Info.plist
@@ -49,5 +49,7 @@
     <string>This app needs access to location when in the background.</string>
     <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
     <string>This app needs access to location when open and in the background.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Camera permission is required for barcode scanning.</string>
 </dict>
 </plist>
