--- a/flutter_examples/super_app/pubspec.yaml
+++ b/flutter_examples/super_app/pubspec.yaml
@@ -31,12 +31,18 @@ dependencies:
   charts_flutter: ^0.6.0
   google_maps_flutter: ^0.5.11
   geolocator: 5.1.0
+  barcode_scan: ^1.0.0
 
 dev_dependencies:
   pedantic: ^1.8.0
 
 flutter:
+  fonts:
+    - family: BarCode
+      fonts:
+        - asset: fonts/BarCode.ttf
   assets:
+    - fonts/BarCode.ttf
     - packages/shrine_images/0-0.jpg
     - packages/shrine_images/1-0.jpg
     - packages/shrine_images/2-0.jpg
